--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -57,22 +57,21 @@
         </div>
 
         <div class="col">
-            <div class="row">
-                <div class="col-4">
-                    <img src="http://placehold.it/64x64" alt="Avatar de Sino">
+            {% set a = ad.author %}
+            <div class="row mb-3 align-items-center">
+                <div class="col-3">
+                    <a href="{{ path('user_show', {'slug': a.slug}) }}">
+                    <img src="{{a.picture}}" class="avatar avatar-medium" alt="Avatar de {{a.fullName}}">
+                    </a>
                 </div>
                 <div class="col">
-                    <h3> Sino Camino</h3>
-                    <span class="badge badge-primary">3 annonces</span>
+                    <a href="{{ path('user_show', {'slug': a.slug}) }}">
+                        <h3>{{a.fullName}}</h3>
+                    </a>
+                    <span class="badge badge-primary">{{a.ads | length}} annonces</span>
                 </div>
             </div>
-            <p> Cecci est une bande annonce. Ce site a été créé pour que des étudiants 
-                puissent louer leur bien ou créer une annonce.</p>  
-                <p> Cecci est une bande annonce. Ce site a été créé pour que des étudiants 
-                puissent louer leur bien ou créer une annonce.</p>
-                <p> Cecci est une bande annonce. Ce site a été créé pour que des étudiants 
-                puissent louer leur bien ou créer une annonce.</p>
-
+            {{ a.description | raw }}          
         </div>
 
     </div>
