--- a/templates/ad/_ad.html.twig
+++ b/templates/ad/_ad.html.twig
@@ -22,6 +22,11 @@
                           {{ ad.introduction }}  
                        </p>
                        <a href="{{ url }}" class="btn-secondary">En savoir plus !</a>
+                       {% if app.user and app.user == ad.author %}
+                           <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" 
+                           class="btn btn-secondary">Modifier l'annonce</a>
+                       {% endif %}
+
                
                   </div>
              
