--- a/templates/ad/show.html.twig
+++ b/templates/ad/show.html.twig
@@ -12,9 +12,17 @@
          <p>{{ad.introduction}}</p>
          <p class="h2">
              <strong>{{ad.rooms}} chambres</strong> pour <strong>{{ad.price}}&euro;
-             </strong> par nuit
+             </strong> par mois
          </p>  
          <a href="#" class="btn btn-primary">Réserver !</a>
+
+         {% if app.user and app.user == ad.author %}
+         <a href="{{ path('ads_edit', {'slug': ad.slug}) }}" class="btn btn-secondary">Modifier l'annonce</a>
+
+         <a href="{{ path('ads_delete', {'slug': ad.slug}) }}" class="btn btn-danger" onclick="return confirm(`Êtes vous sur de vouloir supprimer l'annonce : {
+             {ad.title}} ?`)">Supprimer l'annonce</a>
+
+         {% endif %}
      </div>
 
 </div>
